fix(material/theming): restrict css color usage behind a flag

--- a/src/material/core/style/_sass-utils.scss
+++ b/src/material/core/style/_sass-utils.scss
@@ -3,6 +3,9 @@
 @use 'sass:map';
 @use 'sass:meta';
 
+$use-system-color-variables: false;
+$use-system-typography-variables: false;
+
 /// Include content under the current selector (&) or the document root if there is no current
 /// selector.
 /// @param {String} $root [html] The default root selector to use when there is no current selector.
@@ -61,7 +64,7 @@
   @if (meta.type-of($color) == 'color') {
     @return color.change($color, $args...);
   }
-  @else if ($color != null and map.get($args, alpha) != null) {
+  @else if ($color != null and map.get($args, alpha) != null and $use-system-color-variables) {
     @return #{color(from #{$color} srgb r g b / #{map.get($args, alpha)})};
   }
   @return $color;
